--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
     firebase_auth: ^3.3.20
     intl: ^0.17.0
     google_fonts: ^3.0.1
+    mask_text_input_formatter: ^2.3.0
 
 dev_dependencies:
     flutter_test:
