--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
     intl: ^0.17.0
     google_fonts: ^3.0.1
     mask_text_input_formatter: ^2.3.0
+    flutter_riverpod: ^1.0.4
 
 dev_dependencies:
     flutter_test:
