--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
     google_fonts: ^3.0.1
     mask_text_input_formatter: ^2.3.0
     flutter_riverpod: ^1.0.4
+    cloud_firestore: ^3.2.1
 
 dev_dependencies:
     flutter_test:
