--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
     mask_text_input_formatter: ^2.3.0
     flutter_riverpod: ^1.0.4
     cloud_firestore: ^3.2.1
+    shared_preferences: ^2.0.15
 
 dev_dependencies:
     flutter_test:
