--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
     flutter_riverpod: ^1.0.4
     cloud_firestore: ^3.2.1
     shared_preferences: ^2.0.15
+    image_picker: ^0.8.5+3
+    firebase_storage: ^10.3.1
 
 dev_dependencies:
     flutter_test:
