--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     shared_preferences: ^2.0.15
     image_picker: ^0.8.5+3
     firebase_storage: ^10.3.1
+    http: ^0.13.4
 
 dev_dependencies:
     flutter_test:
