--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
     image_picker: ^0.8.5+3
     firebase_storage: ^10.3.1
     http: ^0.13.4
+    google_maps_flutter: ^2.1.8
+    geolocator: ^9.0.1
 
 dev_dependencies:
     flutter_test:
